--- a/public/pages/board.html
+++ b/public/pages/board.html
@@ -181,7 +181,9 @@ ${ jisik.data.length >= 1 ? $h`
                     <li>
                     	<a href="${(item.is_confirmed === "Y") ? `/v2/mob/board/tip/${item.id}`:`#`}" class="item-link item-content">
                         <div class="item-media item-media-center">
-                          <span class="item-media-image" style="background-image:url(https://modoo24.net${item.repImg})"></span>
+                          <span class="item-media-image"
+                          style="${(item.repImg !== null ) ? `background-image:url(https://modoo24.net${item.repImg});`:`background-color:black;`}"
+                          ></span>
                         </div>
                     		<div class="item-inner">
                     			<div class="item-title-row">
@@ -246,10 +248,116 @@ ${ jisik.data.length >= 1 ? $h`
 
 
   			<div id="tab-funlist" class="page-content tab ${(inittab === "fun") ? $h`tab-active`:``}">
-  				<div class="block">
-  					<p>모두 FUN</p>
-  				</div>
+          <div class="page-content-wrap display-flex justify-content-center page-content-tab-jisik">
+            <div class="wrap max-width-limit sub-tab-jisik-list" style="width:100%">
+              <div class="block-title block-title-medium mt-20">
+                모두 <span class="color_pt">FUN</span>
+              </div>
+
+              <form id="fun_search_form" onSubmit="javascript:return false;">
+                <div class="list inset custom-search-list">
+                	<ul>
+                		<li class="item-content item-input item-input-outline">
+                			<div class="item-inner">
+                        <div class="item-title item-floating-label">선택</div>
+                        <div class="item-input-wrap input-dropdown-wrap">
+                          <select name="search_option" placeholder="Please choose...">
+                            <option value="title">제목</option>
+                            <option value="cont">제목+내용</option>
+                          </select>
+                        </div>
+                			</div>
+                		</li>
+                    <li class="item-content item-input item-input-outline custom-search-list-textbox">
+                      <div class="item-inner">
+                        <div class="item-title item-floating-label">검색</div>
+                        <div class="item-input-wrap">
+                          <input type="text" name="search" placeholder="검색" value=""/>
+                          <span class="input-clear-button"></span>
+                          <span class="button in-input-btn" @click=${funsearch}>검색</span>
+                        </div>
+                      </div>
+                    </li>
+
+                	</ul>
+                </div>
+              </form>
+              <div class="list media-list">
+                <ul>
+                  ${ fun.data.length < 1 ? $h`
+                      <li>내용이 없습니다.</li>
+                    `:``
+                  }
+                  ${fun.data.map( (item)=>$h`
+                    <li>
+                    	<a href="${(item.is_confirmed === "Y") ? `/v2/mob/board/fun/${item.id}`:`#`}" class="item-link item-content">
+                        <div class="item-media item-media-center">
+                          <span class="item-media-image"
+                          style="${(item.repImg !== null ) ? `background-image:url(https://modoo24.net${item.repImg});`:`background-color:black;`}"
+                          ></span>
+                        </div>
+                    		<div class="item-inner">
+                    			<div class="item-title-row">
+                    				<div class="item-title">${item.title}</div>
+                    			</div>
+                          <div class="item-tip-sub-title item-jisik-sub-title">
+                            ${item.created_at} · ${item.nickname}
+                          </div>
+                    			<div class="item-text">
+                          ${(item.is_confirmed === "Y") ? $h`${ item.plainbody }`:`승인대기중`}
+                          </div>
+                    		</div>
+                    	</a>
+                    </li>
+                  `)}
+
+                </ul>
+              </div>
+              <!-- pagination -->
+              ${ fun.data.length >= 1 ? $h`
+                <div class="pagination">
+                  <ul>
+                    ${(fun.currentpage > 1 ) ? $h`
+                      <li class="first-page-link"><a href="#" class="link" data-page='1' @click=${gotofunpage}><i class="fas fa-angle-double-left"></i></a></li>
+                      <li class="prev-page-link"><a href="#" class="link" data-page='${ (fun.currentpage-1 > 0 ) ? fun.currentpage-1 : 1 }' @click=${gotofunpage}><i class="fas fa-angle-left"></i></a></li>
+                    `:$h`
+                    `}
+                    ${ ( fun.currentpage -2 > 1) ? $h`
+                      <li class="page-link-dot"><span>…</span></li>
+                      `:$h``}
+                    ${ (fun.pages >= 5 ) ? $h`
+                      ${fun.pagesarr.map((x) => $h`
+                        ${ (x + fun.currentpage + fun.page_add <= fun.pages) ? $h`
+                          <li><a href="#" class="link ${ (x + fun.currentpage + fun.page_add)== fun.currentpage ? `currnet-page`:`` }" @click=${gotofunpage} data-page="${ x + fun.currentpage + fun.page_add }">${ x + fun.currentpage + fun.page_add }</a></li>
+                          `:$h``
+                        }
+                      `)}
+                    `:$h`
+                      ${fun.pagesarr.map((x) => $h`
+                         <li><a href="#" class="link ${ x== fun.currentpage ? `currnet-page`:``}" @click=${gotofunpage} data-page="${x}">${x}</a></li>
+                      `)}
+                    `}
+
+                    ${ ( fun.currentpage +2 < fun.pages ) ? $h`
+                      <li class="page-link-dot"><span>…</span></li>
+                      `:$h``}
+
+                    ${(fun.currentpage < fun.pages ) ? $h`
+                      <li class="next-page-link"><a href="#" class="link" data-page='${ (fun.currentpage+1 <= fun.pages ) ? fun.currentpage+1 : fun.pages }' @click=${gotofunpage}><i class="fas fa-angle-right"></i></a></li>
+                      <li class="last-page-link"><a href="#" class="link" data-page='${ fun.pages }' @click=${gotofunpage}><i class="fas fa-angle-double-right"></i></a></li>
+                    `:$h`
+                    `}
+                   </ul>
+                </div>
+              `: $h``
+              }
+              <!-- /pagination -->
+            </div>
+          </div>
   			</div>
+
+
+
   		</div>
   	</div>
   </div>
@@ -295,7 +403,21 @@ ${ jisik.data.length >= 1 ? $h`
       'paging' : 2,
       'config' : {},
     }
-
+    let fun = {
+      'url':'/v2/pages/posts/fun',
+      'format':'YY-MM-DD',
+      'form' : '#fun_search_form',
+      'search':$("#funform input[name=search]").val(),
+      'tab' : '#tab-funlist',
+      'total':0,
+      'currentpage':1,
+      'pages':0,
+      'pagesarr':[],
+      'page_add':0,
+      'data' :[],
+      'paging' : 2,
+      'config' : {},
+    }
     let inittab =props.code
 
     const PaginationDraw = (props,{ $update, $h } ) => {
@@ -400,12 +522,17 @@ ${ jisik.data.length >= 1 ? $h`
     const jisiksearch = ()=>{
       drawboard ( jisik ,1)
     }
-
     const gototippage = async (e)=>{
         drawboard ( tip ,parseInt( $(e.target).closest('a').data('page')) )
     }
     const tipsearch = ()=>{
       drawboard ( tip ,1)
+    }
+    const gotofunpage = async (e)=>{
+        drawboard ( fun ,parseInt( $(e.target).closest('a').data('page')) )
+    }
+    const funsearch = ()=>{
+      drawboard ( fun ,1)
     }
 
     $on('pageInit', () => {
@@ -424,6 +551,13 @@ ${ jisik.data.length >= 1 ? $h`
         e.preventDefault();
         e.stopImmediatePropagation();
         drawboard ( tip ,1)
+      });
+
+      drawboard ( fun ,1)
+      $$('#fun_search_form').on('submit', function (e) {
+        e.preventDefault();
+        e.stopImmediatePropagation();
+        drawboard ( fun ,1)
       });
 
     })
